// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeView basic rendering render dynamic content 1`] = `
<div>
  <ul
    class="treeview show-quick-actions-on-hover treeview-light show-component-expander-on-hover"
    role="tree"
    tabindex="-1"
  >
    <li
      class="treeview-item"
      role="none"
    >
      <div
        aria-expanded="false"
        aria-labelledby="clay-id-13"
        aria-owns="clay-id-14"
        class="treeview-link"
        data-id="string,Root"
        role="treeitem"
        style="padding-left: 0px;"
        tabindex="0"
      >
        <span
          class="c-inner"
          style="margin-left: -0px;"
          tabindex="-2"
        >
          <div
            class="autofit-row"
          >
            <div
              class="autofit-col"
            >
              <button
                aria-controls="Root"
                aria-expanded="false"
                class="component-expander btn btn-monospaced"
                tabindex="-1"
                type="button"
              >
                <span
                  class="c-inner"
                  tabindex="-2"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-angle-down"
                    role="presentation"
                  >
                    <use
                      xlink:href="icons.svg#angle-down"
                    />
                  </svg>
                  <svg
                    class="lexicon-icon lexicon-icon-angle-right component-expanded-d-none"
                    role="presentation"
                  >
                    <use
                      xlink:href="icons.svg#angle-right"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <div
              class="autofit-col autofit-col-expand"
            >
              <span
                class="component-text"
                id="clay-id-13"
                tabindex="-1"
              >
                Root
              </span>
            </div>
          </div>
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`TreeView basic rendering render nested dynamic content 1`] = `
<div>
  <ul
    class="treeview show-quick-actions-on-hover treeview-light show-component-expander-on-hover"
    role="tree"
    tabindex="-1"
  >
    <li
      class="treeview-item"
      role="none"
    >
      <div
        aria-expanded="false"
        aria-labelledby="clay-id-22"
        aria-owns="clay-id-23"
        class="treeview-link"
        data-id="string,Foo"
        role="treeitem"
        style="padding-left: 0px;"
        tabindex="0"
      >
        <span
          class="c-inner"
          style="margin-left: -0px;"
          tabindex="-2"
        >
          <div
            class="autofit-row"
          >
            <div
              class="autofit-col"
            >
              <button
                aria-controls="Foo"
                aria-expanded="false"
                class="component-expander btn btn-monospaced"
                tabindex="-1"
                type="button"
              >
                <span
                  class="c-inner"
                  tabindex="-2"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-angle-down"
                    role="presentation"
                  >
                    <use
                      xlink:href="icons.svg#angle-down"
                    />
                  </svg>
                  <svg
                    class="lexicon-icon lexicon-icon-angle-right component-expanded-d-none"
                    role="presentation"
                  >
                    <use
                      xlink:href="icons.svg#angle-right"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <div
              class="autofit-col autofit-col-expand"
            >
              <span
                class="component-text"
                id="clay-id-22"
                tabindex="-1"
              >
                Foo
              </span>
            </div>
          </div>
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`TreeView basic rendering render static content 1`] = `
<div>
  <ul
    class="treeview show-quick-actions-on-hover treeview-light show-component-expander-on-hover"
    role="tree"
    tabindex="-1"
  >
    <li
      class="treeview-item"
      role="none"
    >
      <div
        aria-expanded="false"
        aria-labelledby="clay-id-4"
        aria-owns="clay-id-5"
        class="treeview-link"
        data-id="string,$.0"
        role="treeitem"
        style="padding-left: 0px;"
        tabindex="0"
      >
        <span
          class="c-inner"
          style="margin-left: -0px;"
          tabindex="-2"
        >
          <div
            class="autofit-row"
          >
            <div
              class="autofit-col"
            >
              <button
                aria-controls="$.0"
                aria-expanded="false"
                class="component-expander btn btn-monospaced"
                tabindex="-1"
                type="button"
              >
                <span
                  class="c-inner"
                  tabindex="-2"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-angle-down"
                    role="presentation"
                  >
                    <use
                      xlink:href="icons.svg#angle-down"
                    />
                  </svg>
                  <svg
                    class="lexicon-icon lexicon-icon-angle-right component-expanded-d-none"
                    role="presentation"
                  >
                    <use
                      xlink:href="icons.svg#angle-right"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <div
              class="autofit-col autofit-col-expand"
            >
              <span
                class="component-text"
                id="clay-id-4"
                tabindex="-1"
              >
                Root
              </span>
            </div>
          </div>
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`TreeView basic rendering render with actions 1`] = `
<div>
  <ul
    class="treeview show-quick-actions-on-hover treeview-light show-component-expander-on-hover"
    role="tree"
    tabindex="-1"
  >
    <li
      class="treeview-item"
      role="none"
    >
      <div
        aria-labelledby="clay-id-58"
        aria-owns="clay-id-59"
        class="treeview-link"
        data-id="string,$.0"
        role="treeitem"
        style="padding-left: 24px;"
        tabindex="0"
      >
        <span
          class="c-inner"
          style="margin-left: -24px;"
          tabindex="-2"
        >
          <div
            class="autofit-row"
          >
            <div
              class="autofit-col autofit-col-expand"
            >
              <span
                class="component-text"
                id="clay-id-58"
                tabindex="-1"
              >
                Root
              </span>
            </div>
            <div
              class="autofit-col"
            >
              <button
                class="component-action quick-action-item btn btn-monospaced"
                tabindex="0"
                type="button"
              >
                <svg
                  class="lexicon-icon lexicon-icon-times"
                  role="presentation"
                >
                  <use
                    xlink:href="icons.svg#times"
                  />
                </svg>
              </button>
            </div>
            <div
              class="autofit-col"
            >
              <div
                class="dropdown"
              >
                <button
                  aria-controls="clay-dropdown-menu-1"
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="dropdown-toggle component-action quick-action-item btn btn-monospaced"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-ellipsis-v"
                    role="presentation"
                  >
                    <use
                      xlink:href="icons.svg#ellipsis-v"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`TreeView basic rendering render with checkbox 1`] = `
<div>
  <ul
    class="treeview show-quick-actions-on-hover treeview-light show-component-expander-on-hover"
    role="tree"
    tabindex="-1"
  >
    <li
      class="treeview-item"
      role="none"
    >
      <div
        aria-expanded="false"
        aria-labelledby="clay-id-85"
        aria-owns="clay-id-86"
        class="treeview-link"
        data-id="string,$.0"
        role="treeitem"
        style="padding-left: 0px;"
        tabindex="0"
      >
        <span
          class="c-inner"
          style="margin-left: -0px;"
          tabindex="-2"
        >
          <div
            class="autofit-row"
          >
            <div
              class="autofit-col"
            >
              <button
                aria-controls="$.0"
                aria-expanded="false"
                class="component-expander btn btn-monospaced"
                tabindex="-1"
                type="button"
              >
                <span
                  class="c-inner"
                  tabindex="-2"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-angle-down"
                    role="presentation"
                  >
                    <use
                      xlink:href="icons.svg#angle-down"
                    />
                  </svg>
                  <svg
                    class="lexicon-icon lexicon-icon-angle-right component-expanded-d-none"
                    role="presentation"
                  >
                    <use
                      xlink:href="icons.svg#angle-right"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <div
              class="autofit-col"
            >
              <div
                class="custom-control custom-checkbox"
              >
                <label>
                  <input
                    class="custom-control-input"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  />
                </label>
              </div>
            </div>
            <div
              class="autofit-col autofit-col-expand"
            >
              <span
                class="component-text"
                id="clay-id-85"
                tabindex="-1"
              >
                Root
              </span>
            </div>
          </div>
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`TreeView basic rendering render with item active 1`] = `
<div>
  <ul
    class="treeview show-quick-actions-on-hover treeview-light show-component-expander-on-hover"
    role="tree"
    tabindex="-1"
  >
    <li
      class="treeview-item"
      role="none"
    >
      <div
        aria-expanded="false"
        aria-labelledby="clay-id-142"
        aria-owns="clay-id-143"
        class="treeview-link active"
        data-id="string,$.0"
        role="treeitem"
        style="padding-left: 0px;"
        tabindex="0"
      >
        <span
          class="c-inner"
          style="margin-left: -0px;"
          tabindex="-2"
        >
          <div
            class="autofit-row"
          >
            <div
              class="autofit-col"
            >
              <button
                aria-controls="$.0"
                aria-expanded="false"
                class="component-expander btn btn-monospaced"
                tabindex="-1"
                type="button"
              >
                <span
                  class="c-inner"
                  tabindex="-2"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-angle-down"
                    role="presentation"
                  >
                    <use
                      xlink:href="icons.svg#angle-down"
                    />
                  </svg>
                  <svg
                    class="lexicon-icon lexicon-icon-angle-right component-expanded-d-none"
                    role="presentation"
                  >
                    <use
                      xlink:href="icons.svg#angle-right"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <div
              class="autofit-col"
            >
              <div
                class="custom-control custom-checkbox"
              >
                <label>
                  <input
                    class="custom-control-input"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  />
                </label>
              </div>
            </div>
            <div
              class="autofit-col autofit-col-expand"
            >
              <span
                class="component-text"
                id="clay-id-142"
                tabindex="-1"
              >
                Root
              </span>
            </div>
          </div>
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`TreeView basic rendering render with text 1`] = `
<div>
  <ul
    class="treeview show-quick-actions-on-hover treeview-light show-component-expander-on-hover"
    role="tree"
    tabindex="-1"
  >
    <li
      class="treeview-item"
      role="none"
    >
      <div
        aria-expanded="false"
        aria-labelledby="clay-id-94"
        aria-owns="clay-id-95"
        class="treeview-link"
        data-id="string,$.0"
        role="treeitem"
        style="padding-left: 0px;"
        tabindex="0"
      >
        <span
          class="c-inner"
          style="margin-left: -0px;"
          tabindex="-2"
        >
          <div
            class="autofit-row"
          >
            <div
              class="autofit-col"
            >
              <button
                aria-controls="$.0"
                aria-expanded="false"
                class="component-expander btn btn-monospaced"
                tabindex="-1"
                type="button"
              >
                <span
                  class="c-inner"
                  tabindex="-2"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-angle-down"
                    role="presentation"
                  >
                    <use
                      xlink:href="icons.svg#angle-down"
                    />
                  </svg>
                  <svg
                    class="lexicon-icon lexicon-icon-angle-right component-expanded-d-none"
                    role="presentation"
                  >
                    <use
                      xlink:href="icons.svg#angle-right"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <div
              class="autofit-col"
            >
              <div
                class="custom-control custom-checkbox"
              >
                <label>
                  <input
                    class="custom-control-input"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  />
                </label>
              </div>
            </div>
            <div
              class="autofit-col autofit-col-expand"
            >
              <span
                class="component-text"
                id="clay-id-94"
                tabindex="-1"
              >
                <span
                  class="text-3 text-truncate"
                >
                  Root
                </span>
              </span>
            </div>
          </div>
        </span>
      </div>
    </li>
  </ul>
</div>
`;
